ArgoCD/gooloom-was/gooloom-was-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooloom-was-deployment
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 3
  selector:
    matchLabels:
      app: gooloom-was
  template:
    metadata:
      labels:
        app: gooloom-was
    spec:
      containers:
      - name: gooloom-was-container
        image: csm4903/gooloom-was:v2.1.1
        resources:
          requests:
            memory: "0.8Gi"  # 예상되는 메모리 요구 사항
            # cpu: "0.5"     # 예상되는 CPU 요구 사항
          limits:
            memory: "2Gi"  # 최대 메모리 제한
            cpu: "1"       # 최대 CPU 제한
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: gooloom-service-was
spec:
  selector:
    app: gooloom-was
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8080
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gooloom-service-ing
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: gooloom-service-was
              port:
                number: 8081
