ArgoCD/gooloom-was/gooloom-was-deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooloom-web-deployment
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: gooloom-was
  template:
    metadata:
      labels:
        app: gooloom-was
    spec:
      containers:
      - name: gooloom-was-container
        image: csm4903/gooloom-was:latest
        imagePullPolicy: "Always"
        resources:
          requests:
            memory: 768Mi  # 예상되는 메모리 요구 사항
            cpu: 600m     # 예상되는 CPU 요구 사항
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: gooloom-service-was
spec:
  selector:
    app: gooloom-was
  ports:
  - protocol: TCP
    port: 8001
    targetPort: 8080
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gooloom-service-ing
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:422608248610:certificate/2c3ee83f-dbe2-45eb-a8fb-d9aa49bc0d2d
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/success-codes: 200-399
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: gooloom-service-was
              port:
                number: 8001
